--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Examen Universidad de Jar-Bar</title>
+	<title>Examen Rwby</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Test de alto nivel">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
