--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Examen Rwby</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Test de alto nivel">
+	<meta name="description" content="Test de RWBY">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='stylesheet' media='screen and (min-width: 721px)' href='css/d.css'>
 	<link rel='stylesheet' media='screen and (max-width: 720px)' href='css/m.css'>
